# tree-sitter-k9

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  LICENSE  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  TEST-NEEDS.md  TOPOLOGY.md  binding.gyp  deno.json  flake.nix  grammar.js  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  package.json  setup.sh  stapeln.toml  tree-sitter.json
.github/workflows/: casket-pages.yml  governance.yml  hypatia-scan.yml  pages.yml
.machine_readable/: ADJUST.contractile  INTENT.contractile  MUST.contractile  STATE.a2ml  TRUST.contractile
.machine_readable/anchors/: ANCHOR.a2ml
.well-known/: security.txt
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: Cargo.toml  build.rs  lib.rs
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  usage.adoc
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
src/tree_sitter/: alloc.h  array.h  parser.h
test/corpus/: arrays.txt  let_bindings.txt  magic_number.txt  pedigree_block.txt  trust_levels.txt  type_contracts.txt
tests/aspect/: grammar_aspect_test.ts
tests/bench/: grammar_bench.ts
tests/contract/: grammar_contracts_test.ts
tests/e2e/: grammar_e2e_test.ts
tests/property/: parse_property_test.ts
tests/unit/: grammar_structure_test.ts
